# sono

./: CMakeLists.txt  grammar.json  main.sls  main_test.sls  sono.grammar
include/: astree.h  error_handler.h  grammar.h  lexer.h  parser.h
src/: astree.cc  error_handler.cc  grammar.cc  lexer.cc  main.cc  parser.cc
